--- a/certificates/CertificateWebsite.html
+++ b/certificates/CertificateWebsite.html
@@ -5,6 +5,6 @@
         </title>
     </head>
     <head>
-        <img src="JavaCertificate.jpg" alt="Certificates Image" width="900px" length="1px">
+        <img src="./JavaCertificate.jpg" alt="Certificates Image" width="900px" length="1px">
     </head>
 </html>
