--- a/certificates/CertificateWebsite.html
+++ b/certificates/CertificateWebsite.html
@@ -1,10 +1,10 @@
 <html>
     <head>
         <title>
-            Certificates
+            Certificate
         </title>
     </head>
     <head>
-        <img src="./DevaCertificate/JavaCertificate.jpg" alt="Certificates Image" width="900px" length="1px">
+        <img src="./DevaCertificate/JavaCertificate.jpg" alt="Certificate Image" width="900px" length="1px">
     </head>
 </html>
